Fixed ticket width, title spacing, CC font

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -46,6 +46,7 @@
         position: relative;
 
         .logo {
+          width: max-content;
           position: absolute;
           display: flex;
           align-items: center;
