--- a/src/components/Titles.module.scss
+++ b/src/components/Titles.module.scss
@@ -28,7 +28,6 @@
     white-space: pre-line;
     text-align: center;
     line-height: 1em;
-
     color: var(--darkgray);
     font-size: 48px;
     letter-spacing: -1.056px;
@@ -40,6 +39,7 @@
       font-size: 48px;
     }
     .subTitle {
+      position: relative;
       font-size: 36px;
       bottom: 10px;
     }
@@ -49,8 +49,9 @@
       font-size: 32px;
     }
     .subTitle {
+      position: relative;
       font-size: 24px;
-      bottom: 20px;
+      bottom: 30px;
     }
   }
 }
